--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="lm">
                 <div class="pgoals">
-                    <h2>Proff Goals</h2>
+                    <h2>Professional Goals</h2>
                     <hr>
                     <p>Looking for challenging career which demands best of my
                         professional ability in terms of technical and analytical
